fix vandertak reference

--- a/extracted.bib
+++ b/extracted.bib
@@ -843,6 +843,47 @@
   doi =           {10.1086/304869},
 }
 
+@article{van-der-Tak2007a,
+  author =        {{van der Tak}, F.~F.~S. and {Black}, J.~H. and
+                   {Sch{\"o}ier}, F.~L. and {Jansen}, D.~J. and
+                   {van Dishoeck}, E.~F.},
+  journal =       {\aap},
+  month =         jun,
+  pages =         {627-635},
+  title =         {{A computer program for fast non-LTE analysis of
+                   interstellar line spectra. With diagnostic plots to
+                   interpret observed line intensity ratios}},
+  volume =        {468},
+  year =          {2007},
+  abstract =      {Aims:The large quantity and high quality of modern
+                   radio and infrared line observations require
+                   efficient modeling techniques to infer physical and
+                   chemical parameters such as temperature, density, and
+                   molecular abundances. Methods: We present a computer
+                   program to calculate the intensities of atomic and
+                   molecular lines produced in a uniform medium, based
+                   on statistical equilibrium calculations involving
+                   collisional and radiative processes and including
+                   radiation from background sources. Optical depth
+                   effects are treated with an escape probability
+                   method. The program is available on the World Wide
+                   Web at
+                   http://www.sron.rug.nl/~vdtak/radex/index.shtml. The
+                   program makes use of molecular data files maintained
+                   in the Leiden Atomic and Molecular Database (LAMDA),
+                   which will continue to be improved and expanded.
+                   Results: The performance of the program is compared
+                   with more approximate and with more sophisticated
+                   methods. An Appendix provides diagnostic plots to
+                   estimate physical parameters from line intensity
+                   ratios of commonly observed molecules. Conclusions:
+                   This program should form an important tool in
+                   analyzing observations from current and future radio
+                   and infrared telescopes. Appendices A-D, are only
+                   available in electronic form at http://www.aanda.org},
+  doi =           {10.1051/0004-6361:20066820},
+}
+
 @inproceedings{Dickinson1975a,
   author =        {{Dickinson}, A.~S. and {Richards}, D.},
   booktitle =     {Physics of Electronic and Atomic Collisions: ICPEAC
