--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -10,7 +10,7 @@
 \begin{document}
 \input{authors}
 
-\title{Salts in the disk around Orion \sourcei}
+\title{Orion \sourcei's disk is salty}
 \begin{abstract}
     We report the detection of NaCl and KCl and their $^{37}$Cl and $^{41}$K
     isotopologues toward the disk around Orion \sourcei.  About 60 transitions
@@ -492,7 +492,7 @@ Below, we explore several mechanisms for the observed line excitation:
 provided a Fortran code to compute those rates.  Typical collision rate coefficients for
 \hbox{$\Delta$J=1} or \hbox{$\Delta$J=2} transitions are $10^{-10}$~cm$^3$ \pers.  Making the usual
 assumption that the collision rates with \hh are similar to those for He, we used
-RADEX \citep{Vandertak2007} to examine the excitation \footnote{The
+RADEX \citep{van-der-Tak2007a} to examine the excitation \footnote{The
 RADEX-compatible molecular data
 file incorporating these coefficients is available from
 \url{https://github.com/keflavich/SaltyDisk/blob/\githash/nacl.dat}}.
