changed tables to show integrated intensity instead of linewidth

--- a/41K37Cl_line_parameters.tex
+++ b/41K37Cl_line_parameters.tex
@@ -3,13 +3,13 @@
 \caption{$^{41}$K$^{37}$Cl Lines}
 \begin{tabular}{ccccccc}
 \label{tab:41K37Cl_salt_lines}
- J$_u$ & J$_l$ & Frequency & Velocity & Width & Amplitude & E$_U$ \\
-  &  & $\mathrm{GHz}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{K}$ & $\mathrm{K}$ \\
+ J$_u$ & J$_l$ & Frequency & Velocity & Amplitude & $\int T_A dv$ & E$_U$ \\
+  &  & $\mathrm{GHz}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{K}$ & $\mathrm{K\,km\,s^{-1}}$ & $\mathrm{K}$ \\
 \hline
 &\vspace{-0.75em}\\
 \multicolumn{7}{c}{$v = 7$} \\
 \vspace{-0.75em}\\
- 48 & 47 & 334.32791 & -9.5 (0.0) & 5.7 (0.3) & 24.5 (0.9) & 3049.3 \\
+ 48 & 47 & 334.32791 & -9.5 (0.0) & 24.5 (0.9) & 347.9 (8.2) & 3049.3 \\
 \hline
 \end{tabular}
 
