--- a/41KCl_line_parameters.tex
+++ b/41KCl_line_parameters.tex
@@ -3,22 +3,22 @@
 \caption{$^{41}$KCl Lines}
 \begin{tabular}{ccccccc}
 \label{tab:41KCl_salt_lines}
- J$_u$ & J$_l$ & Frequency & Velocity & Width & Amplitude & E$_U$ \\
-  &  & $\mathrm{GHz}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{K}$ & $\mathrm{K}$ \\
+ J$_u$ & J$_l$ & Frequency & Velocity & Amplitude & $\int T_A dv$ & E$_U$ \\
+  &  & $\mathrm{GHz}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{K}$ & $\mathrm{K\,km\,s^{-1}}$ & $\mathrm{K}$ \\
 \hline
 &\vspace{-0.75em}\\
 \multicolumn{7}{c}{$v = 0$} \\
 \vspace{-0.75em}\\
- 29 & 28 & 217.54317 & 5.5 (0.7) & 6.5 (0.7) & 4.5 (0.4) & 156.7 \\
- 13 & 12 & 97.62809 & 4.7 (2.5) & 10.0 (3.2) & 6.5 (1.3) & 32.8 \\
+ 29 & 28 & 217.54317 & 5.5 (0.7) & 4.5 (0.4) & 72.9 (4.0) & 156.7 \\
+ 13 & 12 & 97.62809 & 4.7 (2.5) & 6.5 (1.3) & 162.6 (24.7) & 32.8 \\
 &\vspace{-0.75em}\\
 \multicolumn{7}{c}{$v = 1$} \\
 \vspace{-0.75em}\\
- 45 & 44 & 334.85439 & 5.1 (0.6) & 2.8 (0.6) & 5.2 (1.0) & 764.9 \\
+ 45 & 44 & 334.85439 & 5.1 (0.6) & 5.2 (1.0) & 36.3 (4.2) & 764.9 \\
 &\vspace{-0.75em}\\
 \multicolumn{7}{c}{$v = 2$} \\
 \vspace{-0.75em}\\
- 31 & 30 & 229.68227 & 2.7 (0.6) & 13.3 (1.0) & 9.6 (0.3) & 962.5 \\
+ 31 & 30 & 229.68227 & 2.7 (0.6) & 9.6 (0.3) & 319.8 (10.2) & 962.5 \\
  12 & 11 & 89.03129 & - (-) & - (-) & - (-) & 813.8 \\
 \hline
 \end{tabular}
