--- a/K37Cl_line_parameters.tex
+++ b/K37Cl_line_parameters.tex
@@ -3,35 +3,35 @@
 \caption{K$^{37}$Cl Lines}
 \begin{tabular}{ccccccc}
 \label{tab:K37Cl_salt_lines}
- J$_u$ & J$_l$ & Frequency & Velocity & Width & Amplitude & E$_U$ \\
-  &  & $\mathrm{GHz}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{K}$ & $\mathrm{K}$ \\
+ J$_u$ & J$_l$ & Frequency & Velocity & Amplitude & $\int T_A dv$ & E$_U$ \\
+  &  & $\mathrm{GHz}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{K}$ & $\mathrm{K\,km\,s^{-1}}$ & $\mathrm{K}$ \\
 \hline
 &\vspace{-0.75em}\\
 \multicolumn{7}{c}{$v = 0$} \\
 \vspace{-0.75em}\\
- 45 & 44 & 335.05072 & 7.0 (0.4) & 5.8 (0.4) & 12.6 (0.7) & 370.4 \\
+ 45 & 44 & 335.05072 & 7.0 (0.4) & 12.6 (0.7) & 182.0 (6.1) & 370.4 \\
 &\vspace{-0.75em}\\
 \multicolumn{7}{c}{$v = 1$} \\
 \vspace{-0.75em}\\
- 47 & 46 & 347.71265 & 4.6 (0.5) & 3.4 (0.5) & 7.4 (1.0) & 794.8 \\
- 31 & 30 & 229.81880 & 5.5 (0.3) & 4.8 (0.3) & 7.2 (0.4) & 570.2 \\
+ 47 & 46 & 347.71265 & 4.6 (0.5) & 7.4 (1.0) & 63.7 (5.1) & 794.8 \\
+ 31 & 30 & 229.81880 & 5.5 (0.3) & 7.2 (0.4) & 86.9 (3.2) & 570.2 \\
 &\vspace{-0.75em}\\
 \multicolumn{7}{c}{$v = 2$} \\
 \vspace{-0.75em}\\
- 12 & 11 & 88.54307 & 5.2 (1.5) & 4.6 (1.5) & 4.3 (1.2) & 811.5 \\
+ 12 & 11 & 88.54307 & 5.2 (1.5) & 4.3 (1.2) & 50.1 (8.5) & 811.5 \\
 &\vspace{-0.75em}\\
 \multicolumn{7}{c}{$v = 3$} \\
 \vspace{-0.75em}\\
- 12 & 11 & 88.00523 & 4.4 (1.4) & 6.4 (1.4) & 5.6 (1.0) & 1198.3 \\
+ 12 & 11 & 88.00523 & 4.4 (1.4) & 5.6 (1.0) & 90.3 (10.4) & 1198.3 \\
 &\vspace{-0.75em}\\
 \multicolumn{7}{c}{$v = 4$} \\
 \vspace{-0.75em}\\
- 32 & 31 & 232.90755 & 5.0 (1.1) & 5.1 (1.1) & 4.0 (0.7) & 1739.2 \\
+ 32 & 31 & 232.90755 & 5.0 (1.1) & 4.0 (0.7) & 51.7 (5.7) & 1739.2 \\
 &\vspace{-0.75em}\\
 \multicolumn{7}{c}{$v = 6$} \\
 \vspace{-0.75em}\\
- 32 & 31 & 230.07072 & 3.9 (1.3) & 5.2 (1.3) & 1.9 (0.4) & 2494.7 \\
- 30 & 29 & 215.73679 & 5.9 (2.8) & 3.0 (2.8) & 1.9 (1.5) & 2473.0 \\
+ 32 & 31 & 230.07072 & 3.9 (1.3) & 1.9 (0.4) & 25.0 (3.4) & 2494.7 \\
+ 30 & 29 & 215.73679 & 5.9 (2.8) & 1.9 (1.5) & 13.9 (7.0) & 2473.0 \\
 \hline
 \end{tabular}
 
