--- a/KCl_line_parameters.tex
+++ b/KCl_line_parameters.tex
@@ -3,54 +3,54 @@
 \caption{KCl Lines}
 \begin{tabular}{ccccccc}
 \label{tab:KCl_salt_lines}
- J$_u$ & J$_l$ & Frequency & Velocity & Width & Amplitude & E$_U$ \\
-  &  & $\mathrm{GHz}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{K}$ & $\mathrm{K}$ \\
+ J$_u$ & J$_l$ & Frequency & Velocity & Amplitude & $\int T_A dv$ & E$_U$ \\
+  &  & $\mathrm{GHz}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{K}$ & $\mathrm{K\,km\,s^{-1}}$ & $\mathrm{K}$ \\
 \hline
 &\vspace{-0.75em}\\
 \multicolumn{7}{c}{$v = 0$} \\
 \vspace{-0.75em}\\
- 28 & 27 & 215.00828 & 5.5 (0.6) & 4.3 (0.6) & 10.4 (1.3) & 149.7 \\
- 30 & 29 & 230.32064 & 4.6 (0.2) & 4.8 (0.2) & 14.4 (0.4) & 171.4 \\
- 45 & 44 & 344.82061 & 2.5 (1.1) & 4.9 (1.1) & 9.7 (1.8) & 381.2 \\
- 13 & 12 & 99.92952 & 4.0 (0.3) & 4.8 (0.3) & 15.3 (0.9) & 33.6 \\
+ 28 & 27 & 215.00828 & 5.5 (0.6) & 10.4 (1.3) & 113.1 (8.4) & 149.7 \\
+ 30 & 29 & 230.32064 & 4.6 (0.2) & 14.4 (0.4) & 171.2 (3.2) & 171.4 \\
+ 45 & 44 & 344.82061 & 2.5 (1.1) & 9.7 (1.8) & 120.0 (13.9) & 381.2 \\
+ 13 & 12 & 99.92952 & 4.0 (0.3) & 15.3 (0.9) & 183.8 (6.5) & 33.6 \\
 &\vspace{-0.75em}\\
 \multicolumn{7}{c}{$v = 1$} \\
 \vspace{-0.75em}\\
- 13 & 12 & 99.31663 & 3.9 (1.0) & 3.6 (1.0) & 8.3 (2.0) & 432.6 \\
- 44 & 43 & 335.13396 & 3.3 (0.3) & 4.1 (0.3) & 14.1 (0.8) & 761.7 \\
+ 13 & 12 & 99.31663 & 3.9 (1.0) & 8.3 (2.0) & 75.2 (11.0) & 432.6 \\
+ 44 & 43 & 335.13396 & 3.3 (0.3) & 14.1 (0.8) & 143.3 (5.0) & 761.7 \\
 &\vspace{-0.75em}\\
 \multicolumn{7}{c}{$v = 2$} \\
 \vspace{-0.75em}\\
- 44 & 43 & 333.06770 & 3.9 (0.5) & 4.8 (0.5) & 11.4 (1.0) & 1155.3 \\
- 13 & 12 & 98.70595 & 2.0 (0.8) & 6.4 (0.8) & 14.2 (1.5) & 828.3 \\
+ 44 & 43 & 333.06770 & 3.9 (0.5) & 11.4 (1.0) & 135.6 (7.3) & 1155.3 \\
+ 13 & 12 & 98.70595 & 2.0 (0.8) & 14.2 (1.5) & 229.2 (15.2) & 828.3 \\
 &\vspace{-0.75em}\\
 \multicolumn{7}{c}{$v = 3$} \\
 \vspace{-0.75em}\\
- 31 & 30 & 233.60570 & 4.8 (0.7) & 4.2 (0.7) & 6.0 (0.8) & 1367.1 \\
- 13 & 12 & 98.09753 & 6.1 (1.1) & 5.0 (1.1) & 9.2 (1.7) & 1220.6 \\
- 29 & 28 & 218.57971 & 4.4 (0.4) & 3.3 (0.4) & 5.0 (0.6) & 1345.1 \\
+ 31 & 30 & 233.60570 & 4.8 (0.7) & 6.0 (0.8) & 64.1 (5.2) & 1367.1 \\
+ 13 & 12 & 98.09753 & 6.1 (1.1) & 9.2 (1.7) & 116.3 (13.2) & 1220.6 \\
+ 29 & 28 & 218.57971 & 4.4 (0.4) & 5.0 (0.6) & 40.8 (2.8) & 1345.1 \\
 &\vspace{-0.75em}\\
 \multicolumn{7}{c}{$v = 4$} \\
 \vspace{-0.75em}\\
- 31 & 30 & 232.16185 & 4.6 (0.6) & 3.9 (0.6) & 6.6 (0.8) & 1755.1 \\
- 13 & 12 & 97.49133 & 8.0 (2.1) & 7.0 (2.4) & 6.1 (1.5) & 1609.5 \\
- 29 & 28 & 217.22891 & -0.3 (0.6) & 3.2 (0.6) & 3.5 (0.6) & 1733.2 \\
+ 31 & 30 & 232.16185 & 4.6 (0.6) & 6.6 (0.8) & 65.0 (5.0) & 1755.1 \\
+ 13 & 12 & 97.49133 & 8.0 (2.1) & 6.1 (1.5) & 107.3 (18.0) & 1609.5 \\
+ 29 & 28 & 217.22891 & -0.3 (0.6) & 3.5 (0.6) & 28.4 (2.8) & 1733.2 \\
 &\vspace{-0.75em}\\
 \multicolumn{7}{c}{$v = 5$} \\
 \vspace{-0.75em}\\
- 45 & 44 & 334.29930 & 2.1 (0.3) & 14.4 (0.5) & 42.9 (0.5) & 2332.2 \\
- 31 & 30 & 230.72399 & 5.3 (0.4) & 4.3 (0.4) & 5.2 (0.5) & 2139.8 \\
- 29 & 28 & 215.88373 & 6.3 (2.1) & 4.3 (2.1) & 3.0 (1.3) & 2118.0 \\
+ 45 & 44 & 334.29930 & 2.1 (0.3) & 42.9 (0.5) & 1550.0 (21.5) & 2332.2 \\
+ 31 & 30 & 230.72399 & 5.3 (0.4) & 5.2 (0.5) & 56.2 (3.1) & 2139.8 \\
+ 29 & 28 & 215.88373 & 6.3 (2.1) & 3.0 (1.3) & 32.6 (8.4) & 2118.0 \\
 &\vspace{-0.75em}\\
 \multicolumn{7}{c}{$v = 6$} \\
 \vspace{-0.75em}\\
- 31 & 30 & 229.29217 & 6.0 (0.5) & 3.2 (0.5) & 4.1 (0.5) & 2521.2 \\
- 47 & 46 & 346.87489 & 0.7 (1.1) & 5.5 (1.2) & 4.4 (0.8) & 2745.3 \\
- 29 & 28 & 214.54412 & 6.3 (1.9) & 4.4 (1.9) & 3.4 (1.3) & 2499.6 \\
+ 31 & 30 & 229.29217 & 6.0 (0.5) & 4.1 (0.5) & 32.6 (2.6) & 2521.2 \\
+ 47 & 46 & 346.87489 & 0.7 (1.1) & 4.4 (0.8) & 61.1 (6.8) & 2745.3 \\
+ 29 & 28 & 214.54412 & 6.3 (1.9) & 3.4 (1.3) & 37.0 (8.5) & 2499.6 \\
 &\vspace{-0.75em}\\
 \multicolumn{7}{c}{$v = 7$} \\
 \vspace{-0.75em}\\
- 47 & 46 & 344.71476 & 4.7 (3.1) & 9.3 (3.9) & 5.1 (1.4) & 3122.1 \\
+ 47 & 46 & 344.71476 & 4.7 (3.1) & 5.1 (1.4) & 118.3 (23.7) & 3122.1 \\
 \hline
 \end{tabular}
 
