--- a/Na37Cl_line_parameters.tex
+++ b/Na37Cl_line_parameters.tex
@@ -3,40 +3,40 @@
 \caption{Na$^{37}$Cl Lines}
 \begin{tabular}{ccccccc}
 \label{tab:Na37Cl_salt_lines}
- J$_u$ & J$_l$ & Frequency & Velocity & Width & Amplitude & E$_U$ \\
-  &  & $\mathrm{GHz}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{K}$ & $\mathrm{K}$ \\
+ J$_u$ & J$_l$ & Frequency & Velocity & Amplitude & $\int T_A dv$ & E$_U$ \\
+  &  & $\mathrm{GHz}$ & $\mathrm{km\,s^{-1}}$ & $\mathrm{K}$ & $\mathrm{K\,km\,s^{-1}}$ & $\mathrm{K}$ \\
 \hline
 &\vspace{-0.75em}\\
 \multicolumn{7}{c}{$v = 0$} \\
 \vspace{-0.75em}\\
- 7 & 6 & 89.22011 & 4.3 (0.4) & 5.0 (0.4) & 18.2 (1.2) & 17.1 \\
- 18 & 17 & 229.24605 & 4.8 (0.1) & 4.7 (0.1) & 21.4 (0.4) & 104.6 \\
+ 7 & 6 & 89.22011 & 4.3 (0.4) & 18.2 (1.2) & 230.2 (8.9) & 17.1 \\
+ 18 & 17 & 229.24605 & 4.8 (0.1) & 21.4 (0.4) & 251.5 (3.2) & 104.6 \\
 &\vspace{-0.75em}\\
 \multicolumn{7}{c}{$v = 1$} \\
 \vspace{-0.75em}\\
- 17 & 16 & 214.93871 & 4.8 (0.4) & 4.6 (0.4) & 18.7 (1.2) & 607.0 \\
- 8 & 7 & 101.21188 & 4.6 (0.3) & 5.7 (0.3) & 19.7 (0.8) & 536.0 \\
+ 17 & 16 & 214.93871 & 4.8 (0.4) & 18.7 (1.2) & 217.3 (8.8) & 607.0 \\
+ 8 & 7 & 101.21188 & 4.6 (0.3) & 19.7 (0.8) & 281.1 (7.1) & 536.0 \\
 &\vspace{-0.75em}\\
 \multicolumn{7}{c}{$v = 2$} \\
 \vspace{-0.75em}\\
- 8 & 7 & 100.46695 & 5.3 (0.4) & 7.9 (0.5) & 15.6 (0.7) & 1045.0 \\
- 7 & 6 & 87.91232 & 4.3 (0.6) & 6.3 (0.6) & 13.1 (1.1) & 1040.1 \\
+ 8 & 7 & 100.46695 & 5.3 (0.4) & 15.6 (0.7) & 307.2 (9.0) & 1045.0 \\
+ 7 & 6 & 87.91232 & 4.3 (0.6) & 13.1 (1.1) & 205.3 (10.2) & 1040.1 \\
 &\vspace{-0.75em}\\
 \multicolumn{7}{c}{$v = 3$} \\
 \vspace{-0.75em}\\
- 7 & 6 & 87.26464 & 2.9 (1.0) & 4.5 (1.0) & 9.0 (1.7) & 1544.3 \\
- 8 & 7 & 99.72675 & 3.7 (0.4) & 5.8 (0.4) & 14.0 (0.8) & 1549.1 \\
+ 7 & 6 & 87.26464 & 2.9 (1.0) & 9.0 (1.7) & 102.0 (11.9) & 1544.3 \\
+ 8 & 7 & 99.72675 & 3.7 (0.4) & 14.0 (0.8) & 203.9 (7.3) & 1549.1 \\
 &\vspace{-0.75em}\\
 \multicolumn{7}{c}{$v = 4$} \\
 \vspace{-0.75em}\\
- 7 & 6 & 86.62109 & -2.1 (1.1) & 8.1 (1.2) & 13.0 (1.4) & 2043.6 \\
- 8 & 7 & 98.99127 & 4.6 (1.1) & 4.2 (1.1) & 8.2 (1.9) & 2048.4 \\
- 27 & 26 & 333.45906 & 5.5 (0.5) & 4.8 (0.5) & 10.9 (1.0) & 2251.3 \\
+ 7 & 6 & 86.62109 & -2.1 (1.1) & 13.0 (1.4) & 265.3 (19.6) & 2043.6 \\
+ 8 & 7 & 98.99127 & 4.6 (1.1) & 8.2 (1.9) & 86.3 (11.9) & 2048.4 \\
+ 27 & 26 & 333.45906 & 5.5 (0.5) & 10.9 (1.0) & 130.9 (7.3) & 2251.3 \\
 &\vspace{-0.75em}\\
 \multicolumn{7}{c}{$v = 5$} \\
 \vspace{-0.75em}\\
- 19 & 18 & 233.16920 & 5.2 (0.5) & 3.9 (0.5) & 7.4 (0.8) & 2633.6 \\
- 7 & 6 & 85.98167 & 5.2 (1.2) & 4.9 (1.2) & 8.1 (1.7) & 2538.2 \\
+ 19 & 18 & 233.16920 & 5.2 (0.5) & 7.4 (0.8) & 72.8 (5.0) & 2633.6 \\
+ 7 & 6 & 85.98167 & 5.2 (1.2) & 8.1 (1.7) & 99.9 (12.6) & 2538.2 \\
 \hline
 \end{tabular}
 
