--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -377,7 +377,7 @@ outflow.  The \mbox{SiO v=5 J=8-7} line, with an upper state energy level of
 but a similar height in the disk.  By contrast, the \mbox{SiO v=0 J=8-7}
 emission, with $E_U=75$ K, starts above the vertical centroid of the NaCl line.
 These spatial anticorrelations suggest that the difference between the
-molecules' emission patterns is driven mostly by excitation, since the salt
+molecules' emission patterns is driven partly by excitation, since the salt
 lines have upper state energy levels intermediate between the SiO v=0 and v=5
 states and trace an intermediate region.
 
