a little more text

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -507,7 +507,11 @@ poorly-justified parameters, but I think they're a good first guess.}
 the critical density is $n_{cr}\sim10^8$ \percc for the $v=0$
 states and $n_{cr}\sim10^{12}$ for the $v>=1$ states, where $v$ is the
 vibrational state quantum number.  These high critical densities effectively
-rule out collisional excitation producing vibrationally excited states.
+rule out collisional excitation producing vibrationally excited states,
+since at such high densities, the rotational $v=0$ states would necessarily
+be thermalized to the same temperature as the vibrational states, contrary
+to what we observe.
+
 
 
 
