add possibility of silicate pumping

--- a/extracted.bib
+++ b/extracted.bib
@@ -928,6 +928,32 @@
   doi =           {10.1146/annurev.astro.45.071206.100404},
 }
 
+@article{Molster2005a,
+  author =        {{Molster}, F. and {Kemper}, C.},
+  journal =       {\ssr},
+  month =         aug,
+  pages =         {3-28},
+  title =         {{Crystalline Silicates}},
+  volume =        {119},
+  year =          {2005},
+  abstract =      {One of the big surprises of the Infrared Space
+                   Observatory (ISO) has been discovery of crystalline
+                   silicates outside our own Solar system. It was
+                   generally assumed before that all cosmic silicates in
+                   space were of amorphous structure. Thanks to ISO we
+                   know now that crystalline silicates are ubiquitous in
+                   the Galaxy (except for the diffuse ISM) and sometimes
+                   even in very large quantities (> 50% of the small
+                   dust particles). The evolution of the crystalline
+                   silicates is still not completely clarified, but the
+                   combination of theoretical modeling and observations
+                   have already shed light on their life-cycle. The
+                   absence of crystalline silicates in the diffuse ISM
+                   provides us with information about the dust
+                   amorphization rate in the ISM.},
+  doi =           {10.1007/s11214-005-8066-x},
+}
+
 @article{Kaplan2017a,
   author =        {{Kaplan}, K.~F. and {Dinerstein}, H.~L. and {Oh}, H. and
                    {Mace}, G.~N. and {Kim}, H. and {Sokal}, K.~R. and
