--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -550,6 +550,19 @@ molecules to still higher states.  Such a strong radiation field would
 be expected to thermalize the rotational ladders within each vibrational
 state to the same high temperature, which is not observed.
 
+We experimented with several RADEX models with varying backgrounds.  The
+fiducial system, with a half-sky-filling $T_{bg}=200$ K (representing the
+optically thick disk) and a dilute 4000 K radiation field $I_{\nu} = (100
+\mathrm{R_\odot})^2 / (30 \mathrm{au})^2 B_\nu(4000 \mathrm{K}$ (representing
+the star) reasonably predicts the $v=1$ and $v=0$ intensities, but
+substantially underpredicts the $v>1$ intensities.  A stronger radiation
+field in the 25-45 \um regime is required, but such a field cannot be
+reasonably produced by combinations of blackbodies.  If there were a dust
+emission feature in that range, such as crystalline silicates forsterite
+and enstatite \citep[e.g.][]{Molster2005a}, that dominated the emission spectrum
+in the far-infrared, it could potentially explain the observed vibrational
+excitation patterns.
+
 
 \par{\textbf{(4) Ultraviolet excitation.}}
 % In this model, collisions and infrared radiation can be ignored.  Instead,
