--- a/extracted.bib
+++ b/extracted.bib
@@ -1152,6 +1152,56 @@
   eid =           {A12},
 }
 
+@article{Baez-Rubio2018a,
+  author =        {{B{\'a}ez-Rubio}, A. and {Jim{\'e}nez-Serra}, I. and
+                   {Mart{\'{\i}}n-Pintado}, J. and {Zhang}, Q. and
+                   {Curiel}, S.},
+  journal =       {\apj},
+  month =         jan,
+  pages =         {4},
+  title =         {{On the Nature of Orion Source I}},
+  volume =        {853},
+  year =          {2018},
+  abstract =      {The Kleinmann--Low nebula in Orion, the closest
+                   region of massive star formation, harbors Source I,
+                   whose nature is under debate. Knowledge of this
+                   source may have profound implications for our
+                   understanding of the energetics of the hot core in
+                   Orion KL since it might be the main heating source in
+                   the region. The spectral energy distribution of this
+                   source in the radio is characterized by a positive
+                   spectral index close to 2, which is consistent with
+                   (i) thermal bremsstrahlung emission of ionized
+                   hydrogen gas produced by a central massive protostar,
+                   or (ii) photospheric bremsstrahlung emission produced
+                   by electrons when deflected by the interaction with
+                   neutral and molecular hydrogen like Mira-like
+                   variable stars. If ionized hydrogen gas were
+                   responsible for the observed continuum emission, its
+                   modeling would predict detectable emission from
+                   hydrogen radio recombination lines (RRLs). However,
+                   our SMA observations were obtained with a high enough
+                   sensitivity to rule out that the radio continuum
+                   emission arises from a dense hypercompact H II region
+                   because the H26alpha line would have been detected,
+                   in contrast with our observations. To explain the
+                   observational constraints, we investigate further the
+                   nature of the radio continuum emission from source I.
+                   We have compared available radio continuum data with
+                   the predictions from our upgraded non-LTE 3D
+                   radiative transfer model, MOdel for REcombination
+                   LInes, to show that radio continuum fluxes and sizes
+                   can only be reproduced by assuming both dust and
+                   bremsstrahlung emission from neutral gas. The dust
+                   emission contribution is significant at nu >= 43 GHz.
+                   In addition, our RRL peak intensity predictions for
+                   the ionized metals case are consistent with the
+                   nondetection of Na and K RRLs at millimeter and
+                   submillimeter wavelengths.},
+  doi =           {10.3847/1538-4357/aaa24b},
+  eid =           {4},
+}
+
 @article{Bally2017a,
   author =        {{Bally}, J. and {Ginsburg}, A. and {Arce}, H. and
                    {Eisner}, J. and {Youngblood}, A. and {Zapata}, L. and
@@ -1237,6 +1287,46 @@
                    Telescope and the NASA Infrared Telescope Facility.},
   doi =           {10.3847/2041-8213/aa5ff6},
   eid =           {L3},
+}
+
+@article{Girart2017a,
+  author =        {{Girart}, J.~M. and {Estalella}, R. and
+                   {Fern{\'a}ndez-L{\'o}pez}, M. and {Curiel}, S. and
+                   {Frau}, P and {Galvan-Madrid}, R. and {Rao}, R. and
+                   {Busquet}, G. and {Ju{\'a}rez}, C.},
+  journal =       {ArXiv e-prints},
+  month =         jul,
+  title =         {{The circumestellar disk of the B0 protostar powering
+                   the HH 80-81 radio jet}},
+  year =          {2017},
+  abstract =      {We present subarcsecond angular resolution
+                   observations carried out with the Submillimeter Array
+                   (SMA) at 880 $\mu$m centered at the B0-type protostar
+                   GGD27~MM1, the driving source of the parsec scale HH
+                   80-81 jet. We constrain its polarized continuum
+                   emission to be $\lesssim0.8\%$ at this wavelength.
+                   Its submm spectrum is dominated by sulfur-bearing
+                   species tracing a rotating disk--like structure (SO
+                   and SO$_2$ isotopologues mainly), but also shows
+                   HCN-bearing and CH$_3$OH lines, which trace the disk
+                   and the outflow cavity walls excavated by the HH
+                   80-81 jet. The presence of many sulfurated lines
+                   could indicate the presence of shocked gas at the
+                   disk's centrifugal barrier or that MM1 is a hot core
+                   at an evolved stage. The resolved SO$_2$ emission
+                   traces very well the disk kinematics and we fit the
+                   SMA observations using a thin-disk Keplerian model,
+                   which gives the inclination (47$^{\circ}$), the inner
+                   ($\lesssim170$ AU) and outer ($\sim950-1300$~AU)
+                   radii and the disk's rotation velocity (3.4 km
+                   s$^{-1}$ at a putative radius of 1700 AU). We roughly
+                   estimate a protostellar dynamical mass of 4-18\msun.
+                   MM2 and WMC cores show, comparatively, an almost
+                   empty spectra suggesting that they are associated
+                   with extended emission detected in previous
+                   low-angular resolution observations, and therefore
+                   indicating youth (MM2) or the presence of a less
+                   massive object (WMC).},
 }
 
 @article{Fortman2012a,
