--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -34,16 +34,30 @@ study, as it is the closest disk around a `high-mass' ($M>8$ \msun) star
 \citep{Hirota2014a,Plambeck2016a,Ginsburg2018b}.  It is also in many ways
 a unique source, being the only known protostellar object with SiO and \water
 masers in an outflow \citep{Goddi2009a,Goddi2010a,Greenhill2013a}.
-In \citet{Ginsburg2018b}, a subset of the authors reported 0.03$\arcsec$ ALMA observations of \sourcei
-that allowed us to measure the outer rotation curve of the
-5(5,0)-6(4,3) \water line in the disk and along the base
-of the outflow; these measurements showed that the interior mass was
-$15 \pm 2$ \msun.  In the same data, we found additional emission lines that
-closely traced the disk and its Keplerian rotation
-curve, but were unable to identify the molecular species responsible
-for these lines.
-We now identify them as transitions of NaCl and KCl
-and their isotopologues, many in excited vibrational levels.
+In \citet{Ginsburg2018b}, a subset of the authors reported 0.03$\arcsec$ ALMA
+observations of \sourcei that allowed us to measure the outer rotation curve of
+the 5(5,0)-6(4,3) \water line in the disk and along the base of the outflow;
+these measurements showed that the interior mass was $15 \pm 2$ \msun.  In the
+same data, we found additional emission lines that closely traced the disk and
+its Keplerian rotation curve, but were unable to identify the molecular species
+responsible for these lines.  We now identify them as transitions of NaCl and
+KCl and their isotopologues, many in excited vibrational levels.
+
+% \rlp{I commented out this paragraph because some of it repeats what is
+% in the first paragraph, and the rest can be covered in the discussion.}
+% The environments around forming stars, however, are also known to harbor
+% molecules that are often rapidly depleted from the gas-phase after ejection.
+% Disks around forming high-mass stars have been resolved only a handful of
+% times.  The disk around Orion Source I (\sourcei) has frequently been observed
+% \citep{Hirota2014a,Plambeck2016a,Ginsburg2018b}, but most molecular species
+% detected trace either an outflow (e.g., SiO) or some combination of the outflow
+% and the disk (e.g., \water).  In HH80/81, a $\sim4$ \msun disk around a
+% $\sim10-20$ \msun star, several lines of SO$_2$ are associated with the disk
+% \citep{Girart2017a}.  Beyond these two sources, only disordered structures or
+% disk-envelope blends have been observed.
+
+
+
 
 Molecules consisting of alkali metals and halogens have only rarely been
 detected in space (McGuire 2018, ApJS, in press).
@@ -83,19 +97,6 @@ to be a powerful tracer of physical conditions and history in a source.
 % vibrational information...} \ag{I haven't e-mailed him; you want to do that?
 % I was just citing your paper since the information came from your brain...
 % we ought to cite you somewhere, if not here}
-
-% \rlp{I commented out this paragraph because some of it repeats what is
-% in the first paragraph, and the rest can be covered in the discussion.}
-% The environments around forming stars, however, are also known to harbor
-% molecules that are often rapidly depleted from the gas-phase after ejection.
-% Disks around forming high-mass stars have been resolved only a handful of
-% times.  The disk around Orion Source I (\sourcei) has frequently been observed
-% \citep{Hirota2014a,Plambeck2016a,Ginsburg2018b}, but most molecular species
-% detected trace either an outflow (e.g., SiO) or some combination of the outflow
-% and the disk (e.g., \water).  In HH80/81, a $\sim4$ \msun disk around a
-% $\sim10-20$ \msun star, several lines of SO$_2$ are associated with the disk
-% \citep{Girart2017a}.  Beyond these two sources, only disordered structures or
-% disk-envelope blends have been observed.
 
 % \bam{In HH80/81, or do you mean beyond
 % this pair only disordered blends have been observed period, anywhere?}
@@ -851,7 +852,9 @@ would be nearly fully ionized between 1500-2000 K at a density of $10^6$
 at a few hundred K higher temperatures than sodium).  These ions react with HCl
 to form NaCl and KCl.  However, at present, only the inner $<20$ AU region,
 which is currently unresolved, clearly reaches
-such high temperatures.  Either material in that inner region is being
+such high temperatures\footnote{We also know from RRL studies
+that there is little to no ionized gas with $T\gtrsim10^4$ K around \sourcei
+\citep{Plambeck2016a,Baez-Rubio2018a}}.  Either material in that inner region is being
 transported outward, which seems unlikely since there is a bulk outflow lifting
 material off of the disk, or the disk was previously substantially warmer.
 Under the dynamical formation scenario of the disk, in which it is the remnant
@@ -922,7 +925,9 @@ star-forming gas.
 It remains unclear whether \sourcei is a unique source or is representative
 of the class of high-mass protostars with disks; if the latter, these lines
 and potentially many others can be used to probe the radiation environment of 
-extremely embedded high-mass protostars.  
+extremely embedded high-mass protostars.  An obvious next step is to search
+for these lines in other resolved disks around high-mass protostars \citep[e.g.
+HH80/81][]{Girart2017a}.
 
 The detection of these species with substantial population in vibrationally
 excited states highlights the need for laboratory work to measure such
