--- a/science.tex
+++ b/science.tex
@@ -35,6 +35,9 @@
 \begin{quote} \bf  }
 {\end{quote}}
 
+\usepackage{xcolor}
+\newcommand{\bam}[1]{\textcolor{green!65!black}{\textbf{[BAM: #1]}}}
+
 
 \date{}
 
@@ -112,27 +115,28 @@ Melvyn Wright\\
 Disks around high-mass stars have been difficult to identify and observe, in
 part because most molecular emission lines do not uniquely trace the disk.
 Observing disks around more massive stars is the critical test of whether star
-formation theories developed on low-mass stars apply at higher masses.  Here,
+formation theories developed on low-mass stars apply at higher masses.  \bam{I think these first two sentences need to contrast more to the low-mass star/disk case.  The general audience is not going to know that the nice protoplanetary disk images they see all over the place from ALMA are around low-mass stars.  I leave a suggestion below.}
+
+\emph{In the last decade, our knowledge of how planetary systems form around low-mass stars like our own has dramatically expanded thanks to new telescope facilities that enable the observation of molecular emission lines from young, isolated protoplanetary disks around these stars.  Testing whether theories developed from these observations apply to high-mass counterparts remains a substantial challenge, as disks around high-mass stars are typically observed while still embedded in their natal molecular cloud.  As a result, most molecular emission lines do not uniquely trace the disks in these regions.} Here,
 we show that two molecular species, NaCl and KCl, appear to uniquely trace the
-outer edges of the disk around the massive (15 \msun) protostellar system Orion
-Source I. These molecules have previously only been detected in the atmospheres
+outer edges of the disk around the massive (15~\msun) protostellar system Orion
+Source I, and are not seen in the disks's natal cloud. These molecules have previously only been detected in the atmospheres
 of dying stars, and are not found in molecularly rich hot-core regions, so they
 are rare enough to be unique tracers of the disk alone.  Indeed, the chemical
-and physical environments in which we have detected these species are so
-favorable, that we observe an unprecedented level of vibrational excitation in
-their populations.    Given their apparently unique properties, we suggest that
+and physical environments of the disk around \sourcei appear to be so
+favorable for NaCl and KCl emission that we observe an unprecedented level of vibrational excitation in their populations.  Because the observed emission is intense, the number of lines large, and the conditions apparently required to produce a detectable population highly distinct, we suggest that
 these salts provide the best hope for unambiguous measurements of disk
-properties in the high-mass regime.
+properties in the high-mass regime.  \bam{Distinct is the wrong word there.  I'm trying to convey that the conditions are super 'choosey' or 'highly selective' but that aren't right, either.}
 
-Disks are ubiquitous around forming stars.  They provide the main mechanism for
+Disks are ubiquitous around forming stars of any mass.  They provide the main mechanism for
 mediating accretion, and, via outflows, shedding angular momentum from the system.
 However, it remains uncertain whether they play an important role in high-mass
 star formation, since the only definitive disk detections are around stars that
 have already acquired most of their mass \cite{Girart2017a,Ginsburg2018b}.
 The lack of clear disk detections is, at least in part, because there were no
 known spectral lines that trace a disk and not the molecule-rich ``hot core''
-in the surrounding region \cite{Goddi2018a,Cesaroni2017a}.  The central disks
-may also be obscured by dust opacity at wavelengths less than 3 mm.
+in the surrounding region \cite{Goddi2018a,Cesaroni2017a}.  For low-mass sources, where the disks are observed in isolation after the surrounding core has \bam{dissipated?  dispersed?  accretted?  been blown off?}, this ambiguity is a non-issue.  For high-mass sources, where the disks are observed still embedded in their natal hot core, substantial confusion can arise.  Further complicating matters, the large densities in these regions can result in central disks
+that may be further obscured by dust opacity at wavelengths less than 3 mm.
 
 % ++++++++
 % BAM: Is there a distinction to be made here between the low-mass sources, where
@@ -162,28 +166,20 @@ rapidly condense onto dust particles.  The most notable example is that of
 IRC+10216, the expanding gas cloud around the AGB star CW Leonis.  Here, NaCl,
 KCl, AlCl, AlF, NaCN, and a number of other metal-bearing molecules have been
 detected \cite{Agundez2012a,Zack2011a}.  In this instance, we use `metal' in
-the chemist's sense of the word.  NaCl and KCl have been detected around other
+the chemist's sense of the word.  NaCl and KCl have been detected around a small handful of other
 AGB and post-AGB stars
 \cite{Milam2007a,Highberger2003a,Sanchez-Contreras2018a}, but to our
 knowledge, no detections outside of these environments have previously been
 reported.
 
-+++++ BAM: Science has a *very* strict policy about not claiming primacy (first
-detections / first discovery / etc.) of anything.  I believe the above sentence
-will pass OK, but the editor may object in the end.
-AG: fair enough, I don't think "FIRST" is super important.  "FIRST USEFUL"
-is....
-+++++
-
-Here, we report the detection of NaCl, KCl, and their $^{37}Cl$ and $^{41}$K
-isotopologues in the disk around Orion Source I.  This disk was previously used
+We have detected NaCl, KCl, and their $^{37}$Cl and $^{41}$K
+isotopologues in the disk around Orion Source I.  This disk, and the emission lines that were found to uniquely trace the disk apart from the hot core, was previously used
 to measure the central mass of Source I as 15 \msun, although those
 measurements were performed before the spectral lines belonging to NaCl and KCl
 were identified \cite{Ginsburg2018b}.  Source I is the brightest object in the
 Orion nebula at millimeter wavelengths and is deeply embedded within a hot core
-\cite{}. Because of the high optical depth of the foreground dust, it is not
-directly detected in the
-mid-infrared \cite{Robberto2005a}. It is a system consisting of a
+\cite{}. %Because of the high optical depth of the foreground dust, it is not directly detected in the mid-infrared \cite{Robberto2005a}. 
+It is a system consisting of a
 $\sim10^4$ \lsun central object with a photospheric temperature $\approx4000$ K
 \cite{Testi2010a} surrounded by a $\sim0.1$ \msun disk, which we observe
 nearly edge-on \cite{Plambeck2016a}.  The central source mass has been
@@ -192,17 +188,20 @@ but the highest-resolution data imply a central source mass $M\approx15$ \msun
 from fitting a Keplerian orbital model to \water and line (now identified as
 NaCl) emission profiles \cite{Ginsburg2018b}.
 
-We performed observations with ALMA in three spectral bands at the highest
-available spatial resolution, 0.03 to 0.10 arcseconds from 0.85 to 3 mm. The
-spectral resolution ranged from 1.5-6.5 \kms over the same range.  We noted a
+\bam{I removed a sentence in there about the mid-infrared.  I'm not sure what it adds, and I don't think it's referenced again?  Further, the last sentence and the second sentence say the exact same thing.  One of them is superfluous...}
+
+We performed the observations using the Atacama Large Millimeter/submillimeter Array (ALMA) in three spectral bands (between 0.85~--~3~mm) at the highest
+available spatial resolution, between 0.03~--~0.10 arcseconds. The
+spectral resolution ranged from 1.5~--~6.5~\kms over the same range.  We noted a
 distinctive morphology in the position-velocity diagrams of several lines,
 showing a clear linear gradient in velocity parallel to the disk. To obtain
 higher signal-to-noise in our extracted spectra, we shifted the spectra by
-their measured centroid velocities and averaged them together, obtaining a
-disk-averaged spectrum.  We use this spectrum to measure and  identify lines
-(see Methods).
+their measured centroid velocities and averaged them together (essentially removing  the Keplerian rotation to produce the equivalent spectrum averaged over a non-rotating object), obtaining a
+disk-averaged spectrum.  We use this spectrum to measure and  identify the emission lines (see Methods).
 
-While the most prominent spectral features are the SiO and \water lines that
+\bam{I added a parenthetical there trying to clarify for the reader what shifting the centroid velocities meant.  It's a very technical phrase.  My parenthetical may be techincally wrong, though?}
+
+While the most prominent spectral features were the SiO and \water lines that
 have previously been observed \cite{Goddi2013a,Hirota2014a}, there were dozens
 of lines that remained unidentified in our initial study \cite{Ginsburg2018b}.
 We have now identified these lines as transitions of NaCl and KCl, noting the
@@ -210,12 +209,12 @@ excellent correspondence between the observed and measured/catalogued
 frequencies \cite{Caris2002a,Caris2004a,Muller2005a,Lovas2005a,Pickett1998a}.
 We additionally searched databases of transitions of these same species with
 more quanta of vibrational excitation, and found additional matches
-\cite{Barton2014a,Cabezas2016a}.
+\cite{Barton2014a,Cabezas2016a}, \bam{with confident detections up to as much as $v=7$ (???)}.
 
-Although the detection of salts lines in a protostellar disk was surprising,
+Although the detection of salt lines in a protostellar disk was surprising,
 the detection of highly vibrationally excited transitions of these species is
-even more so.  The detected transitions have upper-state energy levels up to
-$\sim3000$ K, implying the presence of extremely hot gas or a strong radiation
+even more so.  The detected transitions have upper-state energy levels of as much as 
+$\sim$3000~K, implying the presence of extremely hot gas or a strong radiation
 field. The emission from these lines comes from a narrow range in both position
 and velocity.  By fitting thin Keplerian disk models to the position-velocity
 diagrams of the lines, we constrain the emission region to be 30-60 AU from
@@ -225,8 +224,8 @@ effect of obscuration by the optically thick continuum.  The emission does not
 extend beyond this height, indicating that, unlike SiO and \water, the salts do
 not trace the outflow.
 
-Once in the gas-phase, however, we expect salts to rapidly deplete back into
-dust grains \cite{Cherncheff2012a}.  Since we observe them in emission, they
+Once in the gas phase, however, we expect salts to rapidly deplete back into
+dust grains \cite{Cherncheff2012a}.  Since we observe them in emission, with narrow velocity line profiles, they
 must be released into the gas phase by either grain destruction, or produced
 chemically from simple gas-phase precursors, likely elemental atomic gas
 (either neutral or ionized Na and K).  Because previous studies have ruled out
